[tool.poetry]
name = "symmetrypy"
version = "0.1.0"
description = "wave generator"
authors = ["Alex <temper8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
aggdraw = "^1.3.15"
Pillow = "^9.2.0"
customtkinter = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
